--- a/app/Components/Form/form.css
+++ b/app/Components/Form/form.css
@@ -94,6 +94,10 @@ button{
   font-size: 64px;
 }
 
+.error{
+  color: red;
+}
+
 @media (min-width: 320px) and (max-width: 650px) {
 
     .mail-container{
