--- a/app/Components/Terms/terms.css
+++ b/app/Components/Terms/terms.css
@@ -16,7 +16,7 @@
 
 .terms-head button{
     border: none;
-    background-color: aliceblue;
+    background-color: white;
     color: orangered;
     font-size: 14px;
     width: unset;
