--- a/app/Components/Form/form.css
+++ b/app/Components/Form/form.css
@@ -21,7 +21,7 @@
     place-self: center;
 }
 .messagebox{
-  margin: 10px 0px;
+  margin: 34px 0px;
 }
 .messagebox input{
   width: 100%;
@@ -39,6 +39,7 @@ button{
   background-color: orangered;
   color: white;
   height: 42px;
+  cursor: pointer;
 }
 
 .name input, .emailphone input{
@@ -47,6 +48,9 @@ button{
   border: none;
   font-size: 14px;
   background-color: white;
+  color:#454545;
+  outline: none;
+
 }
 
 .name-container{
@@ -98,6 +102,28 @@ button{
   color: red;
 }
 
+.form-para p{
+  color: #999;
+  font-size: 14px;
+  margin-top: 3px;
+  font-family: var(--font-questrial);
+  line-height: 20px;
+
+}
+
+.form-para h3{
+  font-family: var(--font-ibm);
+  font-size: 21px;
+}
+
+.name-container label, .messagebox label{
+  color: #454545;
+  font-size: 15px;
+  font-family: var(--font-questrial);
+
+}
+
+ 
 @media (min-width: 320px) and (max-width: 650px) {
 
     .mail-container{
