--- a/app/Components/Header/header.css
+++ b/app/Components/Header/header.css
@@ -15,6 +15,11 @@
     color: white;
     width: 129px;
     height: 43px;
+    cursor: pointer;
+}
+
+.header-button button:hover{
+    box-shadow: orangered;
 }
 
 @media (min-width: 320px) and (max-width: 650px) {
