--- a/app/Components/Hero/hero.css
+++ b/app/Components/Hero/hero.css
@@ -17,6 +17,7 @@
 .slide {
     width: 100%;
     transition: transform 0.5s ease-in-out;
+    transition-delay: 5s;
 }
 
  @keyframes slide {
@@ -31,7 +32,7 @@
     80% { transform: translateX(-800%); }
     90% { transform: translateX(-900%); }
     100% { transform: translateX(0%); }
-} 
+}  
 
 
 .hero-para{
