--- a/app/Components/About/about.css
+++ b/app/Components/About/about.css
@@ -12,6 +12,11 @@
 
 }
 
+#about-image{
+    max-width: 700px;
+    width: 100%;
+}
+
 .about-left-container h1{
     font-size: 63px;
     line-height: 88px;
